[tool.poetry]
name = "mitmcache"
version = "0.1.0"
description = ""
authors = ["kitsuyui <kitsuyui@kitsuyui.com>"]
readme = "README.md"
packages = [{ include = "mitmcache" }]

[tool.poetry.dependencies]
python = "^3.10"
mitmproxy = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
isort = "*"
pyupgrade = "*"
pytest-cov = "*"
flake8 = "*"
mypy = "*"
poethepoet = "*"
typing_extensions = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.poe.tasks.proxy]
cmd = "mitmdump -s inject.py --set cache_file=${cache_file}"
args = [{ name = "cache-file", default = "cache.db" }]

[tool.poe.tasks.download_cert]
shell = """
mitmdump &
PID=$!
sleep 3
curl -x 127.0.0.1:8080 'http://mitm.it/cert/pem' -o ${cert_path}
kill $PID
"""
args = [{ name = "cert-path", default = "/tmp/mitm.pem" }]

[tool.poe.tasks]
coverage-xml = "pytest --cov=mitmcache tests --doctest-modules --cov-report=xml"
format-all = [{ ref = "format" }, { cmd = "pyupgrade --py310-plus mitmcache" }]

[tool.poe.tasks.test]
cmd = "pytest ${target}"
args = [
    { name = "target", default = "tests", multiple = true, positional = true },
]

[tool.poe.tasks.check]
sequence = [
    { cmd = "isort --check-only --diff ${target}" },
    { cmd = "black --check --diff ${target}" },
    { cmd = "flake8 ${target}" },
    { cmd = "mypy ${target}" },
]
args = [
    { name = "target", default = "mitmcache tests", multiple = true, positional = true },
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
sequence = [{ cmd = "isort ${target}" }, { cmd = "black ${target}" }]
args = [
    { name = "target", default = "mitmcache tests", multiple = true, positional = true },
]
ignore_fail = "return_non_zero"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13",
    "ignore::ResourceWarning",
]
