[project]
name = "mitmcache"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["mitmproxy"]
description = "A simple cache system for mitmproxy"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
authors = [
    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
]
classifiers = [
    # https://pypi.org/classifiers/
    "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/kitsuyui/python-mitmcache"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "poethepoet",
    "setuptools-scm",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-data = { "mitmcache" = ["py.typed"], "*" = ["README.md, LICENSE"] }
package-dir = { "mitmcache" = "mitmcache" }

[tool.setuptools_scm]
write_to = "mitmcache/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[build-system]
requires = [
    "setuptools", "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.poe.tasks.proxy]
cmd = "mitmdump -s inject.py --set cache_file=${cache_file}"
args = [{ name = "cache-file", default = "cache.db" }]

[tool.poe.tasks.download_cert]
shell = """
mitmdump &
PID=$!
sleep 3
curl -x 127.0.0.1:8080 'http://mitm.it/cert/pem' -o ${cert_path}
kill $PID
"""
args = [{ name = "cert-path", default = "/tmp/mitm.pem" }]

[tool.poe.tasks]
coverage-xml = "pytest --cov=mitmcache tests --doctest-modules --cov-report=xml"
format-all = [{ ref = "format" }, { cmd = "pyupgrade --py310-plus mitmcache" }]

[tool.poe.tasks.test]
cmd = "pytest ${target}"
args = [
    { name = "target", default = "tests", multiple = true, positional = true },
]

[tool.poe.tasks.check]
cmd = "ruff check ${target}"
args = [
    { name = "target", default = "mitmcache tests", multiple = true, positional = true },
]

[tool.poe.tasks.format]
cmd = "ruff format ${target}"
args = [
    { name = "target", default = "mitmcache tests", multiple = true, positional = true },
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13",
    "ignore::ResourceWarning",
]
